// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source Uso de PRAGMA no_pragma.4gl 1`] = `
main 
  display "hello "
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main 
  display "hello "
end main

`;

exports[`Source Uso de PRAGMA pragma.4gl 1`] = `
--@format
main 
  display "hello "
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

MAIN
  DISPLAY"hello "
ENDMAIN
`;
